fix text overflow issues with wide cards

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,8 +7,8 @@
     ". main ."
     "footer footer footer";
 
-  grid-template-columns: 100px 1fr 100px;
-  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100px minmax(0, 1fr) 100px;
+  grid-template-rows: auto minmax(0, 1fr) auto;
   grid-gap: 10px;
 
   min-height: 100vh;
@@ -16,15 +16,15 @@
 
   @media (max-width: map-get($breakpoints, md)) {
     grid-gap: 5px;
-    grid-template-columns: 0 1fr 0;
+    grid-template-columns: 0 minmax(0, 1fr) 0;
   }
 
   @media (min-width: map-get($breakpoints, md)) and (max-width: map-get($breakpoints, lg)) {
-    grid-template-columns: 10% 1fr 10%;
+    grid-template-columns: 10% minmax(0, 1fr) 10%;
   }
 
   @media (min-width: map-get($breakpoints, lg)) {
-    grid-template-columns: 20% 1fr 20%;
+    grid-template-columns: 20% minmax(0, 1fr) 20%;
   }
 }
 
@@ -34,6 +34,8 @@ app-header {
 
 .main {
   grid-area: main;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 app-footer {
