--- a/src/app/category/manage-categories/manage-categories.component.scss
+++ b/src/app/category/manage-categories/manage-categories.component.scss
@@ -34,3 +34,8 @@ mat-card {
 .confirmation-text {
   padding: 1rem;
 }
+
+.editButtons {
+  position: absolute;
+  right: 0.5rem;
+}
