--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -5,20 +5,24 @@
   grid-template-areas: "category-list link-list";
 
   grid-template-columns: minmax(300px, 1fr) 3fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: minmax(0, 1fr);
 
   @media (max-width: map-get($breakpoints, sm)) {
     grid-template-areas:
       "category-list"
       "link-list";
 
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-rows:
       auto /* category-list */
-      1fr; /* link-list */
+      minmax(0, 1fr); /* link-list */
   }
 
   @media (min-width: map-get($breakpoints, sm)) {
     grid-gap: 2rem;
   }
+}
+
+app-link-list {
+  overflow: hidden;
 }
